<resources>
    <string name="dfu_unknown_name">unnamed device</string>
    <string name="dfu_action_abort">Abort</string>
    <string name="dfu_status_initializing">Initializing…</string>
    <string name="dfu_status_connecting">Connecting…</string>
    <string name="dfu_status_starting">Starting DFU…</string>
    <string name="dfu_status_uploading">Uploading…</string>
    <string name="dfu_status_uploading_part" formatted="false">Uploading part %d/%d…</string>
    <string name="dfu_status_validating">Validating…</string>
    <string name="dfu_status_disconnecting">Disconnecting…</string>
    <string name="dfu_status_completed">Done</string>
    <string name="dfu_status_aborted">Aborted</string>
    <string name="dfu_status_aborting">Aborting…</string>
    <string name="dfu_status_error">Upload failed</string>
    <string name="dfu_status_connecting_msg">Connecting to %s…</string>
    <string name="dfu_status_starting_msg">Initializing DFU process…</string>
    <string name="dfu_status_uploading_components_msg">Transmitting components to %s…</string>
    <string name="dfu_status_uploading_msg">Transmitting application to %s…</string>
    <string name="dfu_status_validating_msg">Validating…</string>
    <string name="dfu_status_completed_msg">Application has been send successfully.</string>
    <string name="dfu_status_aborted_msg">Application upload has been canceled.</string>
    <string name="dfu_status_disconnecting_msg">Disconnecting from %s…</string>
    <string name="dfu_status_error_msg">DFU process failed.</string>
    <string name="app_name">nRF Toolbox</string>
    <string name="font_path">fonts/trebucbd.ttf</string>
    <string name="normal_font_path">fonts/trebuc.ttf</string>
    <string name="permission_log_label">read and write log</string>
    <string name="permission_log_description">Allows the app to write and read from Nordic Semiconductor Event log</string>
    <string name="action_about">About</string>
    <string name="action_settings">Settings</string>
    <string name="action_connect">CONNECT</string>
    <string name="action_select">SELECT DEVICE</string>
    <string name="action_disconnect">DISCONNECT</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="drawer_plugins">PLUGINS</string>
    <string name="drawer_plugin_mcp">nRF Master Control Panel</string>
    <string name="battery">%d%%</string>
    <string name="progress">%d%%</string>
    <string name="not_available">n/a</string>
    <string name="not_available_value">" - "</string>
    <string name="no_ble">"Device doesn't have BLE support!"</string>
    <string name="no_apps">No profiles found.</string>
    <string name="not_supported">The device does not have required services.</string>
    <string name="no_application">Web Browser application is not available.</string>
    <string name="no_application_play">Google Play not installed.</string>
    <string name="scanner_title">Select device:</string>
    <string name="scanner_empty">No device found</string>
    <string name="scanner_action_scan">Scan</string>
    <string name="scanner_action_cancel">Cancel</string>
    <string name="scanner_subtitle_bonded">BONDED DEVICES:</string>
    <string name="scanner_subtitle__not_bonded">AVAILABLE DEVICES:</string>
    <string name="bonding">Bonding with the device…</string>
    <string name="bonded">The device is now bonded.</string>
    <string name="log">%1$tR:%1$tS.%1$tL</string>
    <string name="about_title">About</string>
    <string name="about_version">"

Version: %s"</string>
    <string name="about_text">The nRF Toolbox is a container application that stores your Nordic Semiconductor apps in one location.</string>
    <string name="bpm_feature_title">BPM</string>
    <string name="bpm_feature_title_long">BLOOD PRESSURE</string>
    <string name="bpm_section_bp_header">BLOOD PRESSURE</string>
    <string name="bpm_systolic">SYSTOLIC</string>
    <string name="bpm_diastolic">DIASTOLIC</string>
    <string name="bpm_mean_ap">MEAN AP</string>
    <string name="bpm_unit_mmhg">mmHg</string>
    <string name="bpm_unit_kpa">kPa</string>
    <string name="bpm_section_pulse_header">PULSE RATE</string>
    <string name="bpm_pulse">PULSE</string>
    <string name="bpm_unit_bpm">bpm</string>
    <string name="bpm_section_timestamp_header">TIME &amp; DATE</string>
    <string name="bpm_timestamp">%1$tT %1$te.%1$tm.%1$tY</string>
    <string name="bpm_default_name">DEFAULT BPM</string>
    <string name="bpm_about_text">BPM (Blood Pressure Monitor) profile allows you to connect to your Blood Pressure device. It supports the cuff pressure notifications and displays systolic, diastolic and mean arterial pulse values as well as the pulse after blood pressure reading is completed. The implementation supports bondable devices.</string>
    <string name="csc_feature_title">CSC</string>
    <string name="csc_settings_title">CSC Settnigs</string>
    <string name="csc_feature_title_long">CYCLING SPEED &amp; CADENCE</string>
    <string name="csc_section_csc_header">SPEED AND CADENCE</string>
    <string name="csc_speed">SPEED</string>
    <string name="csc_speed_unit">km/h</string>
    <string name="csc_cadence">CADENCE</string>
    <string name="csc_cadence_unit">RPM</string>
    <string name="csc_distance">DISTANCE</string>
    <string name="csc_distance_unit_m">m</string>
    <string name="csc_distance_unit_km">km</string>
    <string name="csc_total_distance">TOTAL DISTANCE</string>
    <string name="csc_total_distance_unit">km</string>
    <string name="csc_gear_ratio">GEAR RATIO</string>
    <string name="csc_default_name">DEFAULT CSC</string>
    <string name="csc_notification_action_disconnect">Disconnect</string>
    <string name="csc_notification_connected_message">%s is connected.</string>
    <string name="csc_settings_wheel_diameter">Wheel size</string>
    <string name="csc_settings_wheel_diameter_title">Wheel size</string>
    <string name="csc_settings_wheel_diameter_summary">Wheel circumference: %s mm</string>
    <string name="csc_about_text">"CSC (Cycling Speed and Cadence) profile allows you to connect to your bike activity sensor. 
It reads wheel and crank data if they are supported by the sensor and calculates speed, cadence, total and trip distance and gear ratio. Set up your wheel size in the settings to get correct readings. 
You may exit the application when connected while still getting notifications."</string>
    <string name="dfu_feature_title">DFU</string>
    <string name="dfu_service_title">nRF Toolbox DFU Proxy</string>
    <string name="dfu_settings_title">DFU Settnigs</string>
    <string name="dfu_feature_title_long">DEVICE FIRMWARE UPDATE</string>
    <string name="dfu_example_files_created">Example HEX files were copied to /sdcard/Noric Semiconductor.</string>
    <string name="dfu_example_new_files_created">New example HEX files were copied to /sdcard/Noric Semiconductor.</string>
    <string name="dfu_scripts_created">DFU script files were copied to /sdcard/Noric Semiconductor.</string>
    <string name="dfu_section_application_header">APPLICATION</string>
    <string name="dfu_file_name_label">File Name:</string>
    <string name="dfu_file_type_label">File Type:</string>
    <string name="dfu_file_size_label">File Size:</string>
    <string name="dfu_file_status_label">Status:</string>
    <string name="dfu_file_size_text">%d bytes</string>
    <string name="dfu_file_status_ok">OK</string>
    <string name="dfu_file_status_no_file">File not loaded</string>
    <string name="dfu_file_status_invalid">Invalid file</string>
    <string name="dfu_file_status_error">Reading file failed</string>
    <string name="dfu_file_status_invalid_message">Please, select valid HEX file</string>
    <string name="dfu_file_info">Info</string>
    <string name="dfu_action_select_file">SELECT FILE</string>
    <string name="dfu_alert_no_filebrowser_title">File Browser not found</string>
    <string name="dfu_alert_no_filebrowser_message">File browser application has not been found on your device. Would you like to download one?</string>
    <string name="dfu_section_dfu_header">DEVICE FIRMWARE UPDATE</string>
    <string name="dfu_action_upload">UPLOAD</string>
    <string name="dfu_action_upload_help">\?</string>
    <string name="dfu_action_upload_cancel">CANCEL</string>
    <string name="dfu_settings_dfu">DFU options</string>
    <string name="dfu_settings_dfu_packets_receipt_notification_label">Packets receipt notification procedure</string>
    <string name="dfu_settings_dfu_number_of_packets_label">Number of packets</string>
    <string name="dfu_settings_dfu_mbr_size">MBR size</string>
    <string name="dfu_settings_dfu_mbr_size_title">MBR size (default 4096 = 0x1000)</string>
    <string name="dfu_settings_dfu_about">About DFU</string>
    <string name="dfu_settings_dfu_about_summary">"DFU documentation on Nordic's Developer Zone"</string>
    <string name="dfu_settings_dfu_information">Information</string>
    <string name="dfu_settings_dfu_number_of_packets_info">During a DFU operation a lot of data packets are being sent to the target. The <i>onCharacteristicWrite(...)</i> callback in Android API is being invoked when the data has been written to the outgoing queue, not when physically sent. Packet Receipt Notifications were introduced to prevent from overflowing the queue. Disabling them or setting the value to high (> ~300) may cause the DFU process to freeze at some point, depending on the device model.</string>
    <string name="dfu_file_type_title">Select file type</string>
    <string name="dfu_uploading_percentage_label">0%</string>
    <string name="dfu_uploading_percentage">%d%%</string>
    <string name="dfu_default_name">DEFAULT DFU</string>
    <string name="dfu_confirmation_dialog_title">Application Uploading</string>
    <string name="dfu_confirmation_dialog_exit_message">Are you sure to exit?</string>
    <string name="dfu_upload_dialog_cancel_message">Are you sure to cancel upload?</string>
    <string name="dfu_success">Application has been transferred successfully.</string>
    <string name="dfu_aborted">Uploading of the application has been canceled.</string>
    <string name="dfu_help_title">Select file</string>
    <string name="gls_feature_title_long">GLUCOSE MONITOR</string>
    <string name="gls_default_name">DEFAULT BGM</string>
    <string name="gls_section_data">READINGS</string>
    <string name="gls_no_data">No values to display</string>
    <string name="gls_section_actions">CONTROL</string>
    <string name="gls_action_all">All</string>
    <string name="gls_action_last">Last</string>
    <string name="gls_action_more">More</string>
    <string name="gls_action_abort">Abort</string>
    <string name="hts_feature_title_long">HEALTH THERMOMETER MONITOR</string>
    <string name="hts_default_name">DEFAULT HTM</string>
    <string name="hts_unit_celsius">°C</string>
    <string name="uart_action_send_hint">Write command</string>
    <string name="uart_action_send">SEND</string>
    <string name="uart_empty">No data to display.</string>
    <string name="uart_edit_command_hint">Enter command</string>
    <string name="uart_edit_active">Active</string>
    <string name="uart_edit_select">Select icon:</string>
</resources>