<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="-1" android:layout_height="-1">
    <no.nordicsemi.android.nrftoolbox.widget.TrebuchetBoldTextView android:textSize="32dp" android:textStyle="1" android:textColor="@color/darkGray" android:layout_width="-2" android:layout_height="-2" android:layout_marginLeft="@dimen/hts_feature_title_long_margin" android:text="@string/hts_feature_title_long" android:layout_centerVertical="true" android:rotation="270.0" />
    <TextView android:textSize="12sp" android:textColor="#ffffff" android:gravity="11" android:id="@id/battery" android:background="@drawable/battery" android:layout_width="-2" android:layout_height="-2" android:layout_marginLeft="@dimen/feature_horizontal_margin" android:layout_marginTop="8dp" android:text="@string/not_available" android:freezesText="true" android:layout_alignParentLeft="true" />
    <no.nordicsemi.android.nrftoolbox.widget.TrebuchetTextView android:textAppearance="?unknown_attr_ref: 1010040" android:ellipsize="3" android:id="@id/device_name" android:layout_width="-2" android:layout_height="-2" android:layout_marginLeft="10dp" android:layout_marginTop="8dp" android:text="@string/hts_default_name" android:maxLines="1" android:freezesText="true" android:layout_toRightOf="@id/battery" android:textAllCaps="true" />
    <no.nordicsemi.android.nrftoolbox.widget.TrebuchetTextView android:textSize="80sp" android:ellipsize="3" android:id="@id/text_hts_value" android:layout_width="-2" android:layout_height="-2" android:text="@string/not_available_value" android:maxLines="1" android:freezesText="true" android:layout_centerHorizontal="true" android:layout_centerVertical="true" />
    <no.nordicsemi.android.nrftoolbox.widget.TrebuchetTextView android:textSize="30sp" android:layout_width="-2" android:layout_height="-2" android:text="@string/hts_unit_celsius" android:layout_toRightOf="@id/text_hts_value" android:layout_centerVertical="true" />
    <Button android:id="@id/action_connect" android:layout_width="-2" android:layout_height="-2" android:layout_marginBottom="@dimen/activity_vertical_margin_bottom" android:text="@string/action_connect" android:layout_alignParentBottom="true" android:layout_centerHorizontal="true" android:onClick="onConnectClicked" style="@style/Widget_Connect" />
</RelativeLayout>
