<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="-1" android:layout_height="-1">
    <no.nordicsemi.android.nrftoolbox.widget.TrebuchetBoldTextView android:textSize="32dp" android:textStyle="1" android:textColor="@color/darkGray" android:layout_width="-2" android:layout_height="-2" android:layout_marginLeft="@dimen/bpm_feature_title_long_margin" android:text="@string/bpm_feature_title_long" android:layout_centerVertical="true" android:rotation="270.0" />
    <TextView android:textSize="12sp" android:textColor="#ffffff" android:gravity="11" android:id="@id/battery" android:background="@drawable/battery" android:layout_width="-2" android:layout_height="-2" android:layout_marginLeft="@dimen/feature_horizontal_margin" android:layout_marginTop="8dp" android:text="@string/not_available" android:freezesText="true" android:layout_alignParentLeft="true" />
    <no.nordicsemi.android.nrftoolbox.widget.TrebuchetTextView android:textAppearance="?unknown_attr_ref: 1010040" android:ellipsize="3" android:id="@id/device_name" android:layout_width="-2" android:layout_height="-2" android:layout_marginLeft="10dp" android:layout_marginTop="8dp" android:text="@string/bpm_default_name" android:maxLines="1" android:freezesText="true" android:layout_toRightOf="@id/battery" android:textAllCaps="true" />
    <LinearLayout android:gravity="1" android:orientation="1" android:layout_width="-1" android:layout_height="-1" android:layout_marginLeft="@dimen/feature_horizontal_margin" android:layout_marginTop="@dimen/feature_vertical_margin_top" android:layout_marginRight="@dimen/feature_horizontal_margin" android:layout_marginBottom="@dimen/activity_vertical_margin_bottom"
        <LinearLayout android:gravity="1" android:orientation="1" android:background="@color/backgroundColor" android:layout_width="-1" android:layout_height="-2">
            <no.nordicsemi.android.nrftoolbox.widget.TrebuchetBoldTextView android:layout_width="-1" android:layout_height="-2" android:text="@string/bpm_section_bp_header" style="@style/Widget_ListTitle" />
            <TableLayout android:padding="@dimen/feature_section_padding" android:layout_width="-1" android:layout_height="-2">
                <TableRow android:layout_width="-1" android:layout_height="-2">
                    <no.nordicsemi.android.nrftoolbox.widget.TrebuchetTextView android:gravity="10" android:layout_width="0dp" android:layout_height="-1" android:text="@string/bpm_systolic" android:layout_weight="1.0" />
                    <no.nordicsemi.android.nrftoolbox.widget.TrebuchetBoldTextView android:textSize="36sp" android:gravity="5" android:id="@id/systolic" android:layout_width="-2" android:layout_height="-1" android:text="@string/not_available_value" android:freezesText="true" />
                    <no.nordicsemi.android.nrftoolbox.widget.TrebuchetTextView android:gravity="50" android:id="@id/systolic_unit" android:layout_width="45dp" android:layout_height="-1" android:freezesText="true" />
                </TableRow>
                <TableRow android:layout_width="-1" android:layout_height="-2" android:layout_marginTop="4dp">
                    <no.nordicsemi.android.nrftoolbox.widget.TrebuchetTextView android:gravity="10" android:layout_width="0dp" android:layout_height="-1" android:text="@string/bpm_diastolic" android:layout_weight="1.0" />
                    <no.nordicsemi.android.nrftoolbox.widget.TrebuchetBoldTextView android:textSize="36sp" android:gravity="5" android:id="@id/diastolic" android:layout_width="-2" android:layout_height="-1" android:text="@string/not_available_value" android:freezesText="true" />
                    <no.nordicsemi.android.nrftoolbox.widget.TrebuchetTextView android:gravity="50" android:id="@id/diastolic_unit" android:layout_width="45dp" android:layout_height="-1" android:freezesText="true" />
                </TableRow>
                <TableRow android:layout_width="-1" android:layout_height="-2" android:layout_marginTop="4dp">
                    <no.nordicsemi.android.nrftoolbox.widget.TrebuchetTextView android:gravity="10" android:layout_width="0dp" android:layout_height="-1" android:text="@string/bpm_mean_ap" android:layout_weight="1.0" />
                    <no.nordicsemi.android.nrftoolbox.widget.TrebuchetBoldTextView android:textSize="36sp" android:gravity="5" android:id="@id/mean_ap" android:layout_width="-2" android:layout_height="-1" android:text="@string/not_available_value" android:freezesText="true" />
                    <no.nordicsemi.android.nrftoolbox.widget.TrebuchetTextView android:gravity="50" android:id="@id/mean_ap_unit" android:layout_width="45dp" android:layout_height="-1" android:freezesText="true" />
                </TableRow>
            </TableLayout>
        </LinearLayout>
        <LinearLayout android:gravity="1" android:orientation="1" android:id="@id/bpm_pulse_pane" android:background="@color/backgroundColor" android:layout_width="-1" android:layout_height="-2" android:layout_marginTop="15dp">
            <no.nordicsemi.android.nrftoolbox.widget.TrebuchetBoldTextView android:layout_width="-1" android:layout_height="-2" android:text="@string/bpm_section_pulse_header" style="@style/Widget_ListTitle" />
            <LinearLayout android:orientation="0" android:padding="@dimen/feature_section_padding" android:layout_width="-1" android:layout_height="-2">
                <no.nordicsemi.android.nrftoolbox.widget.TrebuchetTextView android:gravity="10" android:layout_width="0dp" android:layout_height="-1" android:text="@string/bpm_pulse" android:layout_weight="1.0" />
                <no.nordicsemi.android.nrftoolbox.widget.TrebuchetBoldTextView android:textSize="36sp" android:gravity="5" android:id="@id/pulse" android:layout_width="-2" android:layout_height="-1" android:text="@string/not_available_value" android:freezesText="true" />
                <no.nordicsemi.android.nrftoolbox.widget.TrebuchetTextView android:gravity="50" android:layout_width="45dp" android:layout_height="-1" android:text="@string/bpm_unit_bpm" />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout android:gravity="1" android:orientation="1" android:id="@id/bpm_timestamp_pane" android:background="@color/backgroundColor" android:layout_width="-1" android:layout_height="-2" android:layout_marginTop="15dp">
            <no.nordicsemi.android.nrftoolbox.widget.TrebuchetBoldTextView android:layout_width="-1" android:layout_height="-2" android:text="@string/bpm_section_timestamp_header" style="@style/Widget_ListTitle" />
            <no.nordicsemi.android.nrftoolbox.widget.TrebuchetTextView android:textSize="22sp" android:layout_gravity="1" android:id="@id/timestamp" android:padding="8dp" android:layout_width="-2" android:layout_height="-2" android:text="@string/not_available" android:freezesText="true" />
        </LinearLayout>
    </LinearLayout>
    <Button android:id="@id/action_connect" android:layout_width="-2" android:layout_height="-2" android:layout_marginBottom="@dimen/activity_vertical_margin_bottom" android:text="@string/action_connect" android:layout_alignParentBottom="true" android:layout_centerHorizontal="true" android:onClick="onConnectClicked" style="@style/Widget_Connect" />
</RelativeLayout>
